# Bloom-Template-Implementation

./: README.md  dev-requirements.txt  pyproject.toml  tasks.py
src/eeg_bloom_template/: __init__.py  base.py  comparison.py  engine.py  exceptions.py  serialization.py  template.py  utils.py
src/eeg_bloom_template/backend/: __init__.py  base.py  fnv_backend.py  mmh3_backend.py  token_backend.py
src/eeg_bloom_template/utils/: conversion.py  iteration.py  logging_helpers.py  number_values.py  orthonormalization.py
tests/: test_backend.py  test_comparison.py  test_engine.py  test_serialization.py  test_template.py  test_utils.py
