[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg_bloom_template"
version = "0.0.1"
authors = [
    { name="Cristopher Hernandez", email="22552070+CristopherH95@users.noreply.github.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "rbloom~=1.5.0",
    "mmh3~=4.1.0",
    "numpy>=1.20.0"
]

[project.optional-dependencies]
dev = [
    "invoke~=2.2.0",
    "pip-tools~=7.3.0"
]